# derive

./: .gitignore  LICENSE  derive.cabal
src/: Ast.hs  Main.hs  Parser.hs  Solver.hs
