cabal-version:   3.0
name:            derive
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      robertpoznanski.dev@gmail.com
author:          Robert Poznański
category:        Math
build-type:      Simple

executable derive
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Ast
        Parser
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.3.0
